--- a/grace_interfaces/analytics/templates/analytics/maintwo.html
+++ b/grace_interfaces/analytics/templates/analytics/maintwo.html
@@ -342,8 +342,8 @@ function myFunction() {
 
 <body onload= "myFunction()">
 <div class = "header">
-<button class = "open" id = "show_settings">Settings</a>
-<a href = "/logout/">Log Out</a>
+<button class = "open" id = "show_settings">Settings</button>
+<button> <a href = "/logout/">Log Out </a></button>
 </div>
 <div class = "plots">
 <h2>{{dataset}}: {{anlyt}}: {{present}}<!--: {{anlytmethod}}: {{presentmethod}}*/--></h2>
